Prevent full window scrollbars.

--- a/src/stage/stage.css
+++ b/src/stage/stage.css
@@ -1,3 +1,5 @@
 .Stage {
   position: absolute;
+  width: 100%;
+  height: 100%;
 }
